fix: Refactored images to inline style, fixed profile text overflow

--- a/blocks/card/__image/card__image.css
+++ b/blocks/card/__image/card__image.css
@@ -4,4 +4,6 @@
     object-fit: cover;
     z-index: -1;
     height: 282px;
+    background-size: cover;
+    background-position: center;
 }
