--- a/blocks/cards/__container/cards__container.css
+++ b/blocks/cards/__container/cards__container.css
@@ -10,11 +10,13 @@
 @media screen and (min-width: 501px) and (max-width: 960px) {
     .cards__container {
         grid-template-columns: repeat(2, 1fr);
+        margin: 0 auto;
     }
 }
 
 @media screen and (max-width: 500px) {
     .cards__container {
         grid-template-columns: repeat(1, minmax(282px, 1fr));
+        margin: 0 auto;
     }
 }
