--- a/blocks/profile/__picture/profile__picture.css
+++ b/blocks/profile/__picture/profile__picture.css
@@ -3,6 +3,8 @@
     width: 120px;
     height: 120px;
     margin-right: 30px;
+    background-size: contain;
+    flex-shrink: 0;
 }
 
 @media screen and (max-width: 600px) {
